--- a/styles/staff.css
+++ b/styles/staff.css
@@ -51,13 +51,13 @@ img-btn::after {
 
 
 html, body, .page{
-  max-width: 100%;
+  /* width: 100%; */
   /* height: calc(var(--base) * 4.4); */
   height: 83%;
   margin: 0;
   padding: 0;
   color: white;
-  overflow-x: hidden;
+  overflow: hidden;
   margin-top: 3vh;
   transition: all 0.8s cubic-bezier(0.95, 0.5, 0.495, 0.35);
   -webkit-transition: all 0.8s cubic-bezier(0.95, 0.5, 0.495, 0.35);
@@ -269,10 +269,11 @@ img {
 }
 
 @media (max-width: 750px) {
-  html, body {
-    max-width: 300px;
+  html, body, .page {
     overflow: hidden;
+    width: 300px;
   }
+
   .page {
     height: 100%;
     margin-top: 0;
